# llm-study

./: .gitignore  README.md  model_ddp.pth  pyproject.toml
ch02/01_main_chapter_code/: SimpleTokenizerV1.py  SimpleTokenizerV2.py  split_tool.py  tokenizerV1_test.py  tokenizerV2_test.py
ch02/02_bonus_bytepair-encoder/: RawText.py  bpe_test.py  compare-bpe-tiktoken.py  gpt-enbedding.py  gpt_dataset.py  gpt_dataset_test.py  gpt_dataset_test_batch.py  slide_window.py  token-enbeding01.py
ch03/01_main-chapter-code/: causal_attention.py  causal_attention_example.py  causal_attention_test.py  gpt2_multihead_attention.py  multi_head_attention.py  multi_head_attention_test.py  multi_head_attention_wrapper.py  multi_head_attention_wrapper_test.py  scaled_dot_product_attention.py  self_attention_cover.py  self_attention_test.py  self_attention_test01.py  self_attention_test01_all.py  self_attention_v1.py  self_attention_v2.py  (+3 more)
ch04/: _01_dummyGPT_model.py  _02_word-embed.py  _03_batch_normal.py  _04_feed_forward.py  _05_shortcut_connections.py  _06_transformer_block.py  _07_GPT_model.py  _07_GPT_model_with_different_dropout.py  _08_GPT_model_test.py  _08_GPT_model_test_2.py  _09_generate_text.py
ch05/: RawText.py  _01_generate_text.py  _02_generate_text_simple.py  _03_generate_text_five_step.py  _04_train_model.py  _05_train_model.py  _06_save_weight.py  previous_chapters.py
my_pytorch/: dataset_example.py  gputest01.py  gputest02.py  model.pth  mul_network.py  myDataset.py  test01.py  test02.py  test03.py  train_network.py  train_network_gpu.py  train_network_gpu_ddp.py
(+1 files in other folders)
